--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
+    "ethers": "^6.16.0",
     "lightweight-charts": "^5.1.0",
     "vue": "^3.5.27"
   },
