--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.13.4",
     "ethers": "^6.16.0",
     "lightweight-charts": "^5.1.0",
-    "vue": "^3.5.27"
+    "vue": "^3.5.27",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
