--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
     "sass-embedded": "^1.97.3",
-    "vite": "^7.3.1",
-    "vite-plugin-vue-devtools": "^8.0.5"
+    "vite": "^7.3.1"
   },
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
